# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2019-01-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_api_batch to provide batch execution
      of CloudI services with service configurations in named queues

2018-12-18 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 1.7.5 released

2018-12-17 Michael Truog   <mjtruog at protonmail dot com>

    * Switch to using the OTP_RELEASE macro
      for Erlang source code compatibility
    * Fix parse_trans and setup version string

2018-12-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add logger_proxy message_queue_len check to
      cloudi_service_monitoring
    * Update Travis build configuration

2018-12-12 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_monitoring
      (for Erlang/OTP >= 21 and the changes in CloudI 1.7.4)
    * Add time warp configuration directly to the vm.args file
    * Small change to reduce latency in the
      cloudi_service_router ssh server connection use
    * Improve the build system by expanding variables

2018-12-11 Michael Truog   <mjtruog at protonmail dot com>

    * Add "?" as a supported wildcard character in
      service name patterns
      ("?" will never match the next character in the string and
       is unable to be the last character in the string,
       i.e. "/?/" matches "/a/" but never "/a/b/" while
       "/*/" will match either with "?" taking precedence if
       "*" is also present)
    * Update cpg
    * Fix elli preprocessor use
    * Ensure all Erlang compilation uses erl_opts
      debug_info and deterministic
    * Fix cloudi_core CT test TransId order checks

2018-12-10 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_name:pattern/1 function to have the
      service name pattern wildcard character check in a single place
    * Update trie

2018-12-04 Michael Truog   <mjtruog at protonmail dot com>
