@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2019-01-05 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Add cloudi_service_api_batch CT tests
+
 2019-01-04 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add cloudi_service_api_batch to provide batch execution
